# electro-cafe.github.io

./: .gitignore  README.md  article_1_liste_materiel.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: website.yml
Arduino_code/Neopixel_library_test/Switch_rainbow_red/: Switch_rainbow_red.ino
Arduino_code/Neopixel_library_test/blink_light_print_rgb_value/: blink_light_print_rgb_value.ino
KiCad/Timer_PCB/: #auto_saved_files#  S3 Mini.kicad_mod  Timer_PCB.csv  Timer_PCB.kicad_pcb  Timer_PCB.kicad_prl  Timer_PCB.kicad_pro  Timer_PCB.kicad_sch  _autosave-Timer_PCB.kicad_sch  s3-mini.kicad_sym  ~Timer_PCB.kicad_sch.lck
KiCad/Timer_PCB/Test/: Test.kicad_pcb  (+2 more)
KiCad/custom_library.pretty/: Toggle_Switch_MTS102_TH.kicad_mod
docs/: index.md
docs/blog/: .authors.yml  article_1_logiciel_materiel.md  blog_article_1_logiciel_materiel  tags.md
docs/stylesheets/: extra.css
ressources/: desktop.ini  sticker_habillage_time_tracker.ai  timer.blend  timer.blend1
ressources/3D_print_blender_export/: __Marche_a_suivre.txt  motor_support_2x.stl  motor_support_right_1x.stl  shell_back_x1.stl  shell_main_x1.stl  shell_top_x1.stl
ressources/G_Code_Files/: battery_holder_V2-0.2-20m.gcode  shell_back_x1-0.2-3h3m.gcode
ressources/Slicer_files/: shell_back_x1.3mf  shell_main_x1.3mf  tolerance_test_1.3mf  tolerance_test_2.3mf  top_shell_motor_support_wheel_time_reader.3mf
ressources/schema_illustrator/: C++.ai  Schema_connexion_WS2812.ai  Schema_step_motor_Bipolar_VS_Unipolar.ai  sticker_habillage_time_tracker.ai  ~ai-c6541e43-87a9-48cd-abb4-9d71a66dbe76_.tmp
(+103 files in other folders)
